[package]
name = "tiktoken-rust"
version = "0.2.0"
edition = "2021"
rust-version = "1.67.1"
license = "MIT"
description = "a fast BPE tokeniser for use with OpenAI's models"
repository = "https://github.com/darknight/tiktoken-rust"

[lib]
crate-type = ["lib"]

[dependencies]
fancy-regex = "0.11.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"
rayon = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1.0"
serde_json = "1.0"
sha2 = "0.10"
base64ct = { version = "1.6.0", features = ["alloc"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
once_cell = "1.17.1"

[profile.release]
incremental = true
